[gd_scene load_steps=75 format=2]

[ext_resource path="res://Stages/mon/mon.gd" type="Script" id=1]
[ext_resource path="res://assets/images/rastro_azul.png" type="Texture" id=2]
[ext_resource path="res://Stages/mon/trail.gd" type="Script" id=3]
[ext_resource path="res://assets/images/m_01_azul.png" type="Texture" id=4]
[ext_resource path="res://assets/images/ink_particle_small.png" type="Texture" id=5]
[ext_resource path="res://Stages/mon/ink_particles.gd" type="Script" id=6]
[ext_resource path="res://Stages/mon/powerup_effects/powerup_effects.gd" type="Script" id=7]
[ext_resource path="res://Stages/mon/powerup_effects/freeze.gd" type="Script" id=8]
[ext_resource path="res://assets/images/freeze_effect_temp.png" type="Texture" id=9]
[ext_resource path="res://Stages/mon/powerup_effects/rockets.gd" type="Script" id=10]
[ext_resource path="res://assets/images/sprite_jetpack_foguetes.png" type="Texture" id=11]
[ext_resource path="res://assets/images/sprite_jetpack_braco.png" type="Texture" id=12]
[ext_resource path="res://Stages/mon/powerup_effects/pepper.gd" type="Script" id=13]
[ext_resource path="res://assets/images/flame_smash.png" type="Texture" id=14]
[ext_resource path="res://Stages/mon/powerup_effects/ghost.gd" type="Script" id=15]
[ext_resource path="res://Stages/mon/powerup_effects/medusa.gd" type="Script" id=16]
[ext_resource path="res://assets/images/sprite_medusa.png" type="Texture" id=17]
[ext_resource path="res://Stages/mon/powerup_effects/bombermon.gd" type="Script" id=18]
[ext_resource path="res://Stages/mon/powerup_effects/horns.gd" type="Script" id=19]
[ext_resource path="res://assets/images/horns_temp.png" type="Texture" id=20]
[ext_resource path="res://Stages/mon/powerup_effects/spikespowerup.gd" type="Script" id=21]
[ext_resource path="res://Stages/mon/powerup_effects/net.gd" type="Script" id=22]
[ext_resource path="res://assets/images/net_temp_icon.png" type="Texture" id=23]
[ext_resource path="res://assets/images/bombermon_overhead_icon.png" type="Texture" id=24]

[sub_resource type="Gradient" id=23]
colors = PoolColorArray( 1, 1, 1, 0.207843, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=22]
gradient = SubResource( 23 )

[sub_resource type="ParticlesMaterial" id=21]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 22 )

[sub_resource type="Animation" id=3]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ink:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
length = 0.21
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=42]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ink:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Trail:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.21
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Trail:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 14.8666

[sub_resource type="ParticlesMaterial" id=20]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 650, 0 )
initial_velocity = 180.0
initial_velocity_random = 0.53
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 19.6
angle_random = 0.6

[sub_resource type="Animation" id=8]
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Bombermon/ExplosionParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.06 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 10, 10, 10, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Freeze/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=29]
resource_name = "FreezeNova"
tracks/0/type = "value"
tracks/0/path = NodePath("Freeze/NovaParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Horns/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Medusa/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Medusa/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Net/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Net/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pepper/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pepper/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=41]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Freeze/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Rockets/LeftParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Rockets/RightParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Bombermon/ExplosionParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Rockets/LeftParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rockets/RightParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rockets/BackSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 0 ]
}

[sub_resource type="Animation" id=17]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rockets/BackSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rockets/FrontSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rockets/BackSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("Freeze/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Gradient" id=33]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=34]
gradient = SubResource( 33 )

[sub_resource type="Curve" id=31]
max_value = 1024.0
_data = [ Vector2( 0, 250.89 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 1024 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 31 )

[sub_resource type="ParticlesMaterial" id=30]
lifetime_randomness = 0.15
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 330.0
initial_velocity_random = 0.43
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping_curve = SubResource( 32 )
scale = 0.12
color_ramp = SubResource( 34 )

[sub_resource type="StreamTexture" id=35]
flags = 4
load_path = "res://.import/freeze.png-e2594f8220102b0a1584e71d73abc928.stex"

[sub_resource type="CircleShape2D" id=19]
radius = 86.5171

[sub_resource type="Gradient" id=25]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.756863 )

[sub_resource type="GradientTexture" id=26]
gradient = SubResource( 25 )

[sub_resource type="Curve" id=27]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=28]
curve = SubResource( 27 )

[sub_resource type="ParticlesMaterial" id=24]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 3.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 1.0
scale_curve = SubResource( 28 )
color_ramp = SubResource( 26 )

[sub_resource type="Gradient" id=37]
offsets = PoolRealArray( 0, 0.251613, 0.4, 1 )
colors = PoolColorArray( 1, 0.635742, 0, 1, 0.942871, 0.942871, 0.942871, 1, 0.743652, 0.743652, 0.743652, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=38]
gradient = SubResource( 37 )

[sub_resource type="Curve" id=39]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=40]
curve = SubResource( 39 )

[sub_resource type="ParticlesMaterial" id=36]
lifetime_randomness = 0.5
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 40 )
color_ramp = SubResource( 38 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 25, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 50, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 75, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 100, 0, 25, 25 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=50]
offsets = PoolRealArray( 0, 0.374194, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.615234, 0, 1, 1, 0.380392, 0, 0.243137 )

[sub_resource type="GradientTexture" id=51]
gradient = SubResource( 50 )

[sub_resource type="ParticlesMaterial" id=49]
flag_disable_z = true
direction = Vector3( 0.5, -1, 0 )
spread = 120.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.8
color_ramp = SubResource( 51 )

[node name="Mon" type="KinematicBody2D" groups=["players"]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Trail" type="Particles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.18
local_coords = false
process_material = SubResource( 21 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 4 )
hframes = 13
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 3 )
anims/Down = SubResource( 4 )
anims/Ground = SubResource( 5 )
anims/RESET = SubResource( 42 )
anims/Smash = SubResource( 6 )
anims/Up = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.36937 )
shape = SubResource( 1 )

[node name="Ink" type="Particles2D" parent="."]
emitting = false
amount = 35
lifetime = 2.0
explosiveness = 0.93
local_coords = false
process_material = SubResource( 20 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="PowerupEffects" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="PowerupAnimations" type="AnimationPlayer" parent="PowerupEffects"]
anims/Bombermon = SubResource( 8 )
anims/BombermonAcquire = SubResource( 9 )
anims/Freeze = SubResource( 10 )
anims/FreezeNova = SubResource( 29 )
anims/Horns = SubResource( 11 )
anims/Medusa = SubResource( 12 )
anims/Net = SubResource( 13 )
anims/NetFinish = SubResource( 14 )
anims/Pepper = SubResource( 15 )
anims/RESET = SubResource( 41 )
anims/Rockets = SubResource( 16 )
anims/RocketsReady = SubResource( 17 )
anims/Unfreeze = SubResource( 18 )

[node name="Freeze" type="Node2D" parent="PowerupEffects"]
script = ExtResource( 8 )

[node name="NovaParticles" type="Particles2D" parent="PowerupEffects/Freeze"]
emitting = false
amount = 250
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
local_coords = false
process_material = SubResource( 30 )
texture = SubResource( 35 )

[node name="Sprite" type="Sprite" parent="PowerupEffects/Freeze"]
visible = false
z_index = 1
texture = ExtResource( 9 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Freeze"]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="PowerupEffects/Freeze"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerupEffects/Freeze/Area2D"]
shape = SubResource( 19 )

[node name="Rockets" type="Node2D" parent="PowerupEffects"]
script = ExtResource( 10 )

[node name="LeftParticles" type="Particles2D" parent="PowerupEffects/Rockets"]
position = Vector2( -17, 26 )
emitting = false
amount = 200
lifetime = 0.1
local_coords = false
process_material = SubResource( 24 )

[node name="RightParticles" type="Particles2D" parent="PowerupEffects/Rockets"]
position = Vector2( -4, 26 )
emitting = false
amount = 200
lifetime = 0.1
local_coords = false
process_material = SubResource( 24 )

[node name="BackSprite" type="Sprite" parent="PowerupEffects/Rockets"]
visible = false
position = Vector2( -9, 6 )
texture = ExtResource( 11 )
hframes = 3

[node name="FrontSprite" type="Sprite" parent="PowerupEffects/Rockets"]
visible = false
position = Vector2( -12, 6 )
z_index = 1
texture = ExtResource( 12 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Rockets"]
wait_time = 14.0
one_shot = true

[node name="FlyingTimer" type="Timer" parent="PowerupEffects/Rockets"]
one_shot = true

[node name="Pepper" type="Node2D" parent="PowerupEffects"]
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="PowerupEffects/Pepper"]
visible = false
position = Vector2( 0, -6.00011 )
scale = Vector2( 1.4, 1.4 )
z_index = 1
texture = ExtResource( 14 )
hframes = 4

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Pepper"]
wait_time = 7.0
one_shot = true

[node name="Ghost" type="Node2D" parent="PowerupEffects"]
script = ExtResource( 15 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Ghost"]
wait_time = 3.0
one_shot = true

[node name="Medusa" type="Node2D" parent="PowerupEffects"]
script = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="PowerupEffects/Medusa"]
visible = false
position = Vector2( 0, -6 )
texture = ExtResource( 17 )
hframes = 4

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Medusa"]
wait_time = 7.0
one_shot = true

[node name="Bombermon" type="Node2D" parent="PowerupEffects"]
script = ExtResource( 18 )

[node name="ExplosionParticles" type="Particles2D" parent="PowerupEffects/Bombermon"]
emitting = false
amount = 60
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 36 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Bombermon"]
wait_time = 5.0
one_shot = true

[node name="Area2D" type="Area2D" parent="PowerupEffects/Bombermon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerupEffects/Bombermon/Area2D"]
visible = false
shape = SubResource( 19 )

[node name="OverheadIcon" type="AnimatedSprite" parent="PowerupEffects/Bombermon"]
visible = false
position = Vector2( 0, -28 )
frames = SubResource( 48 )

[node name="FuseSparks" type="Particles2D" parent="PowerupEffects/Bombermon/OverheadIcon"]
visible = false
position = Vector2( 8, -6 )
amount = 6
lifetime = 0.15
process_material = SubResource( 49 )

[node name="Horns" type="Node2D" parent="PowerupEffects"]
script = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="PowerupEffects/Horns"]
visible = false
texture = ExtResource( 20 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Horns"]
wait_time = 7.0
one_shot = true

[node name="Area2D" type="Area2D" parent="PowerupEffects/Horns"]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PowerupEffects/Horns/Area2D"]
position = Vector2( 21.5371, 10.0149 )
polygon = PoolVector2Array( 0.0907364, -3.34476, -7.2802, -7.41796, -7.2802, 0.738338 )

[node name="CollisionPolygon2D1" type="CollisionPolygon2D" parent="PowerupEffects/Horns/Area2D"]
position = Vector2( -15.1712, 8.72701 )
polygon = PoolVector2Array( 1.30538, 2.23587, 1.52002, -6.13012, -6.85091, -1.84228 )

[node name="Spikes" type="Node2D" parent="PowerupEffects"]
script = ExtResource( 21 )

[node name="Net" type="Node2D" parent="PowerupEffects"]
script = ExtResource( 22 )

[node name="DurationTimer" type="Timer" parent="PowerupEffects/Net"]
wait_time = 3.0
one_shot = true

[node name="GroundedTimer" type="Timer" parent="PowerupEffects/Net"]
wait_time = 3.0
one_shot = true

[node name="Sprite" type="Sprite" parent="PowerupEffects/Net"]
visible = false
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 23 )
